[package]
name = "threads-macro"
version = "0.1.0"
authors = ["SamGinzburg <ginzburg.sam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.7", features = ["full", "extra-traits", "parsing"]}
regex = "1"
z3 = "0.4.0"